--- a/information_retrieval_project.ipynb
+++ b/information_retrieval_project.ipynb
@@ -31,7 +31,7 @@
     }
    ],
    "source": [
-    "print(\"Welcome to the information_retrieval_project\")"
+    "print(\"Hello World!\")"
    ]
   }
  ],
