First working Commit with Jupyter Notebook

--- a/information_retrieval_project.ipynb
+++ b/information_retrieval_project.ipynb
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-02-23T15:25:24.383465Z",
-     "start_time": "2024-02-23T15:25:24.374867Z"
+     "end_time": "2024-02-23T15:30:27.913879Z",
+     "start_time": "2024-02-23T15:30:27.909224Z"
     }
    },
    "outputs": [
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Welcome to the information_retrieval_project\n"
+      "Hello World!\n"
      ]
     }
    ],
