baseline_system Refactoring

--- a/baseline_system.ipynb
+++ b/baseline_system.ipynb
@@ -1,12 +1,51 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Information Retrieval Project - Baseline System\n",
+    "\n",
+    "The code below represents a baseline system that serving as a comparison point for the of the other adopted implementations.\n"
+   ],
+   "id": "caa7ecb3b6243386"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Installation of Requirements\n",
+    "\n",
+    "This part of the code installs necessary dependencies specified in the `requirements.txt` file.\n",
+    "Utilizes the `!pip install -r requirements.txt` command to install packages listed in the `requirements.txt` file. This ensures that all required dependencies are installed before proceeding with execution.\n"
+   ],
+   "id": "64eaafd9ffb9a5b1"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "!pip install -r requirements.txt",
+   "id": "1fad65ab50caf320"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Importing Required Libraries\n",
+    "\n",
+    "This part of the code imports necessary libraries."
+   ],
+   "id": "44828b062b510635"
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-20T08:19:54.819195Z",
-     "start_time": "2024-05-20T08:19:54.816934Z"
+     "end_time": "2024-05-21T09:01:41.287451Z",
+     "start_time": "2024-05-21T09:01:35.931992Z"
     }
    },
    "source": [
@@ -20,13 +59,23 @@
     "from sklearn.model_selection import train_test_split\n"
    ],
    "outputs": [],
-   "execution_count": 62
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Definition of constants\n",
+    "\n",
+    "This part of the code defines useful constants and paths.\n"
+   ],
+   "id": "94ec4d4faa5971be"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-20T08:19:54.822892Z",
-     "start_time": "2024-05-20T08:19:54.820327Z"
+     "end_time": "2024-05-21T09:01:41.292119Z",
+     "start_time": "2024-05-21T09:01:41.288559Z"
     }
    },
    "cell_type": "code",
@@ -52,17 +101,21 @@
    ],
    "id": "44a588eba13acb1d",
    "outputs": [],
-   "execution_count": 63
+   "execution_count": 2
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "**Dataset Download Function**:\n",
+    "    - `download_dataset_from_kaggle()` checks if the dataset exists locally; if not, it downloads and unzips it using the Kaggle API."
+   ],
+   "id": "cf63932b73b9bd63"
   },
   {
    "cell_type": "code",
    "id": "a07532c2f38321a5",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-20T08:19:54.826391Z",
-     "start_time": "2024-05-20T08:19:54.823847Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "# Download dataset from Kaggle website\n",
     "def download_dataset_from_kaggle(dataset_id: str, dataset_path: str) -> None:\n",
@@ -91,52 +144,60 @@
     "# Execute the download operation\n",
     "download_dataset_from_kaggle(dataset_id=DATASET_ID, dataset_path=DATASET_PATH)\n"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "> Dataset already downloaded.\n"
-     ]
-    }
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "**DataFrame Construction**:\n",
+    "    - `build_dataframe()` creates a DataFrame from the dataset, with file paths and corresponding class labels.\n",
+    "\n",
+    "**Random Index Selection**:\n",
+    "    - `get_random_indices()` returns a specified number of random indices from the training dataset for retrieval purposes.\n",
+    "\n",
+    "**Evaluation Metrics Calculation**:\n",
+    "    - `compute_evaluation_metrics()` computes precision, recall, F1-score, and Discounted Cumulative Gain (DCG) based on the labels of the retrieved images compared to the query image's label.\n",
+    "\n",
+    "**Average Model Performance Evaluation**:\n",
+    "    - `get_average_model_performance()` iterates over the test dataset, retrieves random images from the training set, and computes the average precision, recall, F1-score, and DCG for various values of `k`.\n",
+    "\n",
+    "**Execution**:\n",
+    "    - The dataset is downloaded and a DataFrame is built from the images.\n",
+    "    - The dataset is split into training and test sets.\n",
+    "    - The baseline system's performance is evaluated by comparing the retrieved images with the query images.\n",
+    "    - The average performance metrics are printed."
    ],
-   "execution_count": 64
+   "id": "a761b6f89df2a54c"
   },
   {
    "cell_type": "code",
    "id": "ab0fa0a3ebe89d99",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-20T08:21:52.832817Z",
-     "start_time": "2024-05-20T08:21:52.825240Z"
+     "end_time": "2024-05-21T09:01:41.305343Z",
+     "start_time": "2024-05-21T09:01:41.296791Z"
     }
    },
    "source": [
     "# Define a pandas dataframe\n",
     "def build_dataframe(dataset_path: str) -> pd.DataFrame:\n",
     "    \"\"\"\n",
-    "    Build a dataframe from dataset\n",
+    "    Build a dataframe from dataset.\n",
     "    \n",
-    "    :param dataset_path: Path to the dataset\n",
+    "    :param dataset_path: Path to the dataset directory.\n",
     "    \n",
-    "    :return: Dataframe.\n",
+    "    :return: DataFrame containing file paths and corresponding class labels.\n",
     "    \"\"\"\n",
-    "    data = []\n",
-    "    \n",
-    "    for class_label, directory_names in enumerate(CLASSES):\n",
-    "        # Folder path -> archives/COVID or archives/non-COVID\n",
-    "        folder_path = os.path.join(dataset_path, directory_names)  \n",
-    "        \n",
-    "        for file in os.listdir(folder_path):\n",
-    "            # File path -> example. archives/COVID/Covid (1).png\n",
-    "            file_path = os.path.join(folder_path, file)\n",
-    "            \n",
-    "            # Append file information along with class label to the data list\n",
-    "            data.append([file_path, class_label])\n",
-    "            \n",
-    "    # Create a DataFrame using the collected data with appropriate column name\n",
-    "    data_df = pd.DataFrame(data=data, columns=[\"file_paths\", \"labels\"])\n",
+    "    # Generate a list of tuples containing file paths and their corresponding class labels\n",
+    "    data = [\n",
+    "        (os.path.join(dataset_path, directory_name, file), class_label)\n",
+    "        for class_label, directory_name in enumerate(CLASSES)\n",
+    "        for file in os.listdir(os.path.join(dataset_path, directory_name))\n",
+    "    ]\n",
+    "    # Create a DataFrame from the list of tuples with appropriate column names\n",
+    "    data_df = pd.DataFrame(data, columns=[\"file_paths\", \"labels\"])\n",
     "    \n",
     "    return data_df\n",
     "\n",
@@ -249,7 +310,7 @@
     "    return df_avg_metrics\n"
    ],
    "outputs": [],
-   "execution_count": 74
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -279,8 +340,8 @@
    "id": "36f27e6ae310c379",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-20T08:50:04.714453Z",
-     "start_time": "2024-05-20T08:50:04.711691Z"
+     "end_time": "2024-05-21T09:02:04.403846Z",
+     "start_time": "2024-05-21T09:02:04.400719Z"
     }
    },
    "source": [
@@ -297,21 +358,21 @@
       "> BASELINE SYSTEM AVERAGE PERFORMANCE:\n",
       "     avg_precision  avg_recall    avg_f1    avg_dcg\n",
       "K                                                  \n",
-      "5         0.502616    0.050192  0.091195   1.489020\n",
-      "10        0.508451    0.101639  0.169187   2.311265\n",
-      "20        0.500805    0.199851  0.285140   3.541912\n",
-      "30        0.500671    0.299383  0.373860   4.602720\n",
-      "40        0.503924    0.401663  0.445951   5.593869\n",
-      "50        0.500523    0.498688  0.498396   6.473602\n",
-      "60        0.502515    0.601137  0.546111   7.355093\n",
-      "70        0.502472    0.700965  0.583977   8.184723\n",
-      "80        0.501836    0.800460  0.615501   8.979630\n",
-      "90        0.500872    0.898853  0.641864   9.746145\n",
-      "100       0.501469    1.000000  0.666546  10.515106\n"
+      "5         0.471630    0.047543  0.086305   1.394764\n",
+      "10        0.481288    0.097100  0.161371   2.176542\n",
+      "20        0.494668    0.199354  0.283620   3.445352\n",
+      "30        0.493159    0.297944  0.370630   4.485812\n",
+      "40        0.494416    0.398063  0.439998   5.446419\n",
+      "50        0.497304    0.500408  0.497664   6.365891\n",
+      "60        0.496244    0.599352  0.541657   7.209804\n",
+      "70        0.496465    0.699727  0.579482   8.032058\n",
+      "80        0.496756    0.799953  0.611526   8.829484\n",
+      "90        0.496982    0.900452  0.639063   9.604945\n",
+      "100       0.496821    1.000000  0.662421  10.356471\n"
      ]
     }
    ],
-   "execution_count": 96
+   "execution_count": 7
   }
  ],
  "metadata": {
