baseline_system Refactoring

--- a/baseline_system.ipynb
+++ b/baseline_system.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Information Retrieval Project - Baseline System\n",
     "\n",
-    "The code below represents a baseline system that serving as a comparison point for the of the other adopted implementations.\n"
+    "The code below represents a baseline system serving as a comparison point for the of the other adopted implementations.\n"
    ],
    "id": "caa7ecb3b6243386"
   },
