baseline_system Refactoring

--- a/baseline_system.ipynb
+++ b/baseline_system.ipynb
@@ -152,22 +152,22 @@
    "cell_type": "markdown",
    "source": [
     "**DataFrame Construction**:\n",
-    "    - `build_dataframe()` creates a DataFrame from the dataset, with file paths and corresponding class labels.\n",
+    "- `build_dataframe()` creates a DataFrame from the dataset, with file paths and corresponding class labels.\n",
     "\n",
     "**Random Index Selection**:\n",
-    "    - `get_random_indices()` returns a specified number of random indices from the training dataset for retrieval purposes.\n",
+    "- `get_random_indices()` returns a specified number of random indices from the training dataset.\n",
     "\n",
     "**Evaluation Metrics Calculation**:\n",
-    "    - `compute_evaluation_metrics()` computes precision, recall, F1-score, and Discounted Cumulative Gain (DCG) based on the labels of the retrieved images compared to the query image's label.\n",
+    "- `compute_evaluation_metrics()` computes precision, recall, F1-score, and Discounted Cumulative Gain (DCG) based on the labels of the retrieved images compared to the query image's label.\n",
     "\n",
     "**Average Model Performance Evaluation**:\n",
-    "    - `get_average_model_performance()` iterates over the test dataset, retrieves random images from the training set, and computes the average precision, recall, F1-score, and DCG for various values of `k`.\n",
+    "- `get_average_model_performance()` iterates over the test dataset, retrieves random images from the training set, and computes the average precision, recall, F1-score, and DCG for various values of `k`.\n",
     "\n",
     "**Execution**:\n",
-    "    - The dataset is downloaded and a DataFrame is built from the images.\n",
-    "    - The dataset is split into training and test sets.\n",
-    "    - The baseline system's performance is evaluated by comparing the retrieved images with the query images.\n",
-    "    - The average performance metrics are printed."
+    "- The dataset is downloaded and a DataFrame is built from the images.\n",
+    "- The dataset is split into training and test sets.\n",
+    "- The baseline system's performance is evaluated by comparing the retrieved images with the query images.\n",
+    "- The average performance metrics are printed."
    ],
    "id": "a761b6f89df2a54c"
   },
