baseline_system Refactoring

--- a/baseline_system.ipynb
+++ b/baseline_system.ipynb
@@ -340,14 +340,14 @@
    "id": "36f27e6ae310c379",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-21T09:02:04.403846Z",
-     "start_time": "2024-05-21T09:02:04.400719Z"
+     "end_time": "2024-05-21T09:20:06.530661Z",
+     "start_time": "2024-05-21T09:20:06.523288Z"
     }
    },
    "source": [
     "# Print average performance\n",
     "print(f\"\\n> BASELINE SYSTEM AVERAGE PERFORMANCE:\")\n",
-    "print(df.to_string())\n"
+    "display(df)\n"
    ],
    "outputs": [
     {
@@ -355,24 +355,146 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "> BASELINE SYSTEM AVERAGE PERFORMANCE:\n",
-      "     avg_precision  avg_recall    avg_f1    avg_dcg\n",
-      "K                                                  \n",
-      "5         0.471630    0.047543  0.086305   1.394764\n",
-      "10        0.481288    0.097100  0.161371   2.176542\n",
-      "20        0.494668    0.199354  0.283620   3.445352\n",
-      "30        0.493159    0.297944  0.370630   4.485812\n",
-      "40        0.494416    0.398063  0.439998   5.446419\n",
-      "50        0.497304    0.500408  0.497664   6.365891\n",
-      "60        0.496244    0.599352  0.541657   7.209804\n",
-      "70        0.496465    0.699727  0.579482   8.032058\n",
-      "80        0.496756    0.799953  0.611526   8.829484\n",
-      "90        0.496982    0.900452  0.639063   9.604945\n",
-      "100       0.496821    1.000000  0.662421  10.356471\n"
+      "> BASELINE SYSTEM AVERAGE PERFORMANCE:\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "     avg_precision  avg_recall    avg_f1    avg_dcg\n",
+       "K                                                  \n",
+       "5         0.471630    0.047543  0.086305   1.394764\n",
+       "10        0.481288    0.097100  0.161371   2.176542\n",
+       "20        0.494668    0.199354  0.283620   3.445352\n",
+       "30        0.493159    0.297944  0.370630   4.485812\n",
+       "40        0.494416    0.398063  0.439998   5.446419\n",
+       "50        0.497304    0.500408  0.497664   6.365891\n",
+       "60        0.496244    0.599352  0.541657   7.209804\n",
+       "70        0.496465    0.699727  0.579482   8.032058\n",
+       "80        0.496756    0.799953  0.611526   8.829484\n",
+       "90        0.496982    0.900452  0.639063   9.604945\n",
+       "100       0.496821    1.000000  0.662421  10.356471"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>avg_precision</th>\n",
+       "      <th>avg_recall</th>\n",
+       "      <th>avg_f1</th>\n",
+       "      <th>avg_dcg</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>K</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.471630</td>\n",
+       "      <td>0.047543</td>\n",
+       "      <td>0.086305</td>\n",
+       "      <td>1.394764</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0.481288</td>\n",
+       "      <td>0.097100</td>\n",
+       "      <td>0.161371</td>\n",
+       "      <td>2.176542</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>0.494668</td>\n",
+       "      <td>0.199354</td>\n",
+       "      <td>0.283620</td>\n",
+       "      <td>3.445352</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>0.493159</td>\n",
+       "      <td>0.297944</td>\n",
+       "      <td>0.370630</td>\n",
+       "      <td>4.485812</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>0.494416</td>\n",
+       "      <td>0.398063</td>\n",
+       "      <td>0.439998</td>\n",
+       "      <td>5.446419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>0.497304</td>\n",
+       "      <td>0.500408</td>\n",
+       "      <td>0.497664</td>\n",
+       "      <td>6.365891</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>0.496244</td>\n",
+       "      <td>0.599352</td>\n",
+       "      <td>0.541657</td>\n",
+       "      <td>7.209804</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>0.496465</td>\n",
+       "      <td>0.699727</td>\n",
+       "      <td>0.579482</td>\n",
+       "      <td>8.032058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>0.496756</td>\n",
+       "      <td>0.799953</td>\n",
+       "      <td>0.611526</td>\n",
+       "      <td>8.829484</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>0.496982</td>\n",
+       "      <td>0.900452</td>\n",
+       "      <td>0.639063</td>\n",
+       "      <td>9.604945</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>0.496821</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.662421</td>\n",
+       "      <td>10.356471</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
-   "execution_count": 7
+   "execution_count": 10
   }
  ],
  "metadata": {
