baseline_system Refactoring

--- a/baseline_system.ipynb
+++ b/baseline_system.ipynb
@@ -14,10 +14,9 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "# Installation of Requirements\n",
+    "**Installation of Requirements**\n",
     "\n",
-    "This part of the code installs necessary dependencies specified in the `requirements.txt` file.\n",
-    "Utilizes the `!pip install -r requirements.txt` command to install packages listed in the `requirements.txt` file. This ensures that all required dependencies are installed before proceeding with execution.\n"
+    "- This part of the code installs necessary dependencies specified in the `requirements.txt` file. Utilizes the `!pip install -r requirements.txt` command to install packages listed in the `requirements.txt` file. This ensures that all required dependencies are installed before proceeding with execution.\n"
    ],
    "id": "64eaafd9ffb9a5b1"
   },
@@ -33,9 +32,8 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "# Importing Required Libraries\n",
-    "\n",
-    "This part of the code imports necessary libraries."
+    "**Importing Required Libraries**\n",
+    "- This part of the code imports necessary libraries."
    ],
    "id": "44828b062b510635"
   },
@@ -65,9 +63,8 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "# Definition of constants\n",
-    "\n",
-    "This part of the code defines useful constants and paths.\n"
+    "**Definition of constants**\n",
+    "- This part of the code defines useful constants and paths.\n"
    ],
    "id": "94ec4d4faa5971be"
   },
@@ -108,7 +105,7 @@
    "cell_type": "markdown",
    "source": [
     "**Dataset Download Function**:\n",
-    "    - `download_dataset_from_kaggle()` checks if the dataset exists locally; if not, it downloads and unzips it using the Kaggle API."
+    "- `download_dataset_from_kaggle()` checks if the dataset exists locally; if not, it downloads and unzips it using the Kaggle API."
    ],
    "id": "cf63932b73b9bd63"
   },
