--- a/baseline_system.ipynb
+++ b/baseline_system.ipynb
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "source": [
     "**Definition of constants**\n",
-    "- This part of the code defines useful constants and paths.\n"
+    "- This part of the code defines useful constants.\n"
    ],
    "id": "94ec4d4faa5971be"
   },
